welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:8: error: ';' expected but 'else' found.
		else vuBiscuit = false
                ^